--- a/app/globals.css
+++ b/app/globals.css
@@ -9,7 +9,8 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
+    /* --background: #0a0a0a; */
+    --background: #fff;
     --foreground: #ededed;
   }
 }
@@ -18,4 +19,9 @@ body {
   color: var(--foreground);
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
+}
+
+
+.mux-player-controls {
+  --controls: none;
 }
