--- a/app/globals.css
+++ b/app/globals.css
@@ -5,6 +5,8 @@
 :root {
   --background: #ffffff;
   --foreground: #171717;
+
+  --padding-side: 3rem;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -21,7 +23,18 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-
 .mux-player-controls {
   --controls: none;
+}
+
+@media (max-width: 1024px) {
+  :root {
+    --padding-side: 2rem;
+  }
+}
+
+@media (max-width: 480px) {
+  :root {
+    --padding-side: 1rem;
+  }
 }
