--- a/app/(frontend)/globals.css
+++ b/app/(frontend)/globals.css
@@ -68,3 +68,16 @@
 .grecaptcha-badge {
   display: none !important;
 }
+
+@layer utilities {
+  .animation-delay-200 {
+    animation-delay: -200ms !important;
+  }
+  .animation-delay-400 {
+    animation-delay: -400ms !important;
+  }
+}
+
+.scrollDownArrow {
+  @apply block w-4 h-4 sm:w-5 sm:h-5 border-b sm:border-b-2 border-r sm:border-r-2 border-foreground rotate-45 -m-2 sm:m-[-10px] animate-scrollDown;
+}
