hero responsive, header responsive

--- a/app/(frontend)/globals.css
+++ b/app/(frontend)/globals.css
@@ -43,6 +43,12 @@
   }
 }
 
+.custom-border-gradient {
+  border: 2px solid;
+  border-image-slice: 1;
+  border-image-source: linear-gradient(to left, #c84159, #6697d0);
+}
+
 .underline-partial {
   @apply w-fit relative before:content-[""] before:absolute before:-bottom-2 before:left-0 before:w-[calc(50%)] before:h-[2px] before:bg-gradient before:z-10;
 }
