--- a/app/(frontend)/globals.css
+++ b/app/(frontend)/globals.css
@@ -53,8 +53,12 @@
   @apply w-fit relative before:content-[""] before:absolute before:-bottom-2 before:left-0 before:w-[calc(50%)] before:h-[2px] before:bg-gradient before:z-10;
 }
 
+.underline-full {
+  @apply w-fit relative before:content-[""] before:absolute before:-bottom-2 before:-left-2 before:w-[calc(100%+1rem)] before:h-[2px] before:bg-gradient before:z-10;
+}
+
 .underline-link {
-  @apply w-fit relative before:content-[""] before:absolute before:-bottom-1 before:-left-2 before:w-0 hover:before:w-[calc(100%+1rem)] before:transition-all before:h-[2px] before:bg-gradient before:z-10;
+  @apply w-fit relative before:content-[""] before:absolute before:-bottom-2 before:-left-2 before:w-0 hover:before:w-[calc(100%+1rem)] before:transition-all before:h-[2px] before:bg-gradient before:z-10;
 }
 
 .cursor,
